--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -1,24 +1,94 @@
+<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
 <body>
 
-<div class="container">
-	  <table class="table">
-			<thead class="thead-dark">
-			  <tr>
-				<th>Novas solicitações de benefícios: </th>
-			  </tr>
-			</thead>
-			<tbody>
-			  <tr>
-				<td><button type="button" class="btn"><a href="listarPassageiros.phtml" id="estudante"> Estudante/Professor </button></td>
-			  </tr>
-			  <tr>
-				<td><button type="button" class="btn"><a href="listarPassageiros.phtml" id="idoso">Pessoa Idosa </button></td>
-			  </tr>
-			  <tr>
-				<td><button type="button" class="btn"><a href="listarPassageiros.phtml" id="deficiencia"> Pessoa com Deficiência </button> </td>
-			  </tr>
-			</tbody>
-		  </table>
+<div class="container fundo">
+
+	  <div class="table-responsive">
+							<table class="table table-bordered text-center" style="background-color: white;">
+								<tr class="text-primary">
+									<th class="cabecalho text-primary active" colspan="4"><center>Novas Solicitações de Benefícios</center></th>
+								</tr>
+								<tr>
+									<th class="cabecalho text-primary active" colspan="1">Nº</th>
+									<th class="cabecalho text-primary active" colspan="1"><center>Nome</center></th>
+									<th class="cabecalho text-primary active" colspan="1"> <center>Data de Solicitação</center></th>
+									<th class="cabecalho text-primary active" colspan="1"><center>Situação</center></th>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+								<tr>
+									<td class="cabecalho text-primary active">1</td>
+									<td> Vagner Ereno Quincozes </td>
+									<td> 25/03/2019 </td>
+									<td><input type="button" class="botao"> </td>
+								</tr>
+							</table>
+	  
+	  
 </div>
 
 </body>
