--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
 <body>
 
@@ -18,77 +21,167 @@
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao"> </td>
-								</tr>
+									<td> Vagner  Quincozes </td>
+									<td> 25/03/2019 </td>	
+									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+
+								 </tr>
 							</table>
 	  
-	  
 </div>
+	<!-- Modal -->
+<div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+         <div class="modal-content">
+             <div class="modal-header">
+			     <h4 class="modal-title">ESTUDANTES/PROFESSORES</h4>
+                 <button type="button" class="close" data-dismiss="modal">
+					<span>&times;</span>
+				 </button>
+             </div>
+             <div class="modal-body">
+				
+				<div class="container-fluid"> 
+					<div class="row">
+						<table class="table table-bordered text-center" style="background-color: white;">
+								<tr>
+									<td>Nome completo:</td>
+									<td id="nomeCompleto"> Vagner Ereno Quincozes </td>
+								</tr>
+								<tr>
+									<td>CPF:</td>
+									<td id="cpf"> 040.450.192.58 </td>
+								</tr>
+								<tr>
+									<td>Data de Nascimento:</td>
+									<td id="dataDeNascimento"> 18/05/2017 </td>
+								</tr>								
+								<tr>
+									<td>Comprovante de Matrícula:</td>
+									<td id="comprovanteDeMatricula"> Arquivo.. </td>
+								</tr>
+								<tr>
+									<td>Comprovante de Residência:</td>
+									<td id="comprovanteDeResidencia"> Arquivo.. </td>
+								</tr>
+								<tr>
+									<td>Rua:</td>
+									<td id="rua"> Mariz e Barros</td>
+								</tr>
+								<tr>
+									<td>Nº:</td>
+									<td id="numeroCasa"> 268 </td>
+								</tr>
+								<tr>
+									<td>Bairro:</td>
+									<td id="bairro"> Centro </td>
+								</tr>
+								<tr>
+									<td>Celular:</td>
+									<td id="celular"> 55 997018562 </td>
+								</tr>
+								<tr>
+									<td>Benefício Concedido:</td>
+									<td><div class="dropdown">
+											<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="beneficioConcedido">
+												Nenhum
+											</button>
+											<div class="dropdown-menu">
+												<a class="dropdown-item" href="#">Meia-Passagem</a>
+												<a class="dropdown-item" href="#">Isenção</a>
+											</div>
+										</div>
+									
+								</tr>
+						</table>
+					</div>
+				</div>
+				 
+				 		 
+				 
+				 
+				 
+             </div>
+             <div class="modal-footer">
+			    <button type="button" class="btn btn-success" data-dismiss="modal">Salvar</button>
+
+                 <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+             </div>
+         </div>
+    </div>
+ </div>
+
 
 </body>
