modificações nas telas

--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -115,45 +115,46 @@
 				
 				<div class="container-fluid"> 
 					<div class="row">
-						<table class="table table-bordered text-center" style="background-color: white;">
+						<table class="" style="background-color: white;">
 								<tr>
-									<td>Nome completo:</td>
-									<td id="nomeCompleto"> Vagner Ereno Quincozes </td>
+									<td><div style="text-align: right;">Nome completo:&nbsp;</div> </td>
+									<td><input type="text" id="nomeCompleto" value="Vagner Ereno Quincozes" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
-									<td>CPF:</td>
-									<td id="cpf"> 040.450.192.58 </td>
+									<td><div style="text-align: right;">CPF:&nbsp;</div></td>
+									<td><input type="text" id="cpf" value="040.459.542-10" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
-									<td>Data de Nascimento:</td>
-									<td id="dataDeNascimento"> 18/05/2017 </td>
+									<td><div style="text-align: right;">Data de Nascimento:&nbsp;</div></td>
+									<td><input type="text" id="dataDeNascimento" value="18/05/2017" style="width:400px;font-size: 15px"></input></td>
 								</tr>								
 								<tr>
-									<td>Comprovante de Matrícula:</td>
-									<td id="comprovanteDeMatricula"> Arquivo.. </td>
+									<td><div style="text-align: right;">Comprovante de Matrícula:&nbsp;</div></td>
+									<td><button class="primary" id="comprovanteDeMatricula">Baixar arquivo PDF.. </button> </td>
 								</tr>
 								<tr>
-									<td>Comprovante de Residência:</td>
-									<td id="comprovanteDeResidencia"> Arquivo.. </td>
+									<td><div style="text-align: right;">Comprovante de Residência:&nbsp;</div></td>
+									<td><button class="primary" id="comprovanteDeResidencia">Baixar arquivo PDF.. </button></td>
 								</tr>
 								<tr>
-									<td>Rua:</td>
-									<td id="rua"> Mariz e Barros</td>
+									<td><div style="text-align: right;">Rua:&nbsp;</div></td>
+									<td><input type="text" id="rua" value="Barão do Amazonas" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
-									<td>Nº:</td>
-									<td id="numeroCasa"> 268 </td>
+									<td><div style="text-align: right;">Nº:&nbsp;</div></td>
+									<td><input type="text" id="numeroCasa" value="210" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
-									<td>Bairro:</td>
-									<td id="bairro"> Centro </td>
+									<td><div style="text-align: right;">Bairro:&nbsp;</div></td>
+									<td><input type="text" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
-									<td>Celular:</td>
-									<td id="celular"> 55 997018562 </td>
+									<td><div style="text-align: right;">Celular:&nbsp;</div></td>
+									<td><input type="text" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
+									
 								</tr>
 								<tr>
-									<td>Benefício Concedido:</td>
+									<td><div style="text-align: right;">Benefício Concedido:&nbsp;</div></td>
 									<td><div class="dropdown">
 											<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="beneficioConcedido">
 												Nenhum
