utilizando ícone de editar do bootstrap ao invés botão com imagem

--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -2,6 +2,8 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 <body>
 
 <div class="container fundo">
@@ -21,82 +23,119 @@
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>									
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-								</tr>
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-								</tr>
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-								</tr>
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>								</tr>
 								<tr>
 									<td class="cabecalho text-primary active">1</td>
 									<td> Vagner  Quincozes </td>
 									<td> 25/03/2019 </td>	
-									<td><input type="button" class="botao" data-toggle="modal" data-target="#modal-mensagem"></td>
-
+									<td>
+										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-edit"></i>
+										</button>
+									</td>
 								 </tr>
 							</table>
 	  
