--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -2,6 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
 <div class="container fundo">
@@ -32,7 +33,7 @@
 					<div class="col-sm-4"> Centro </div>
 					<div class="col-sm-4"> Ibirapuitã </div>
 					<div class="col-sm-2"> 5 </div>
-					<div class="col-sm-1"> <input type="button" class="botaoOnOf"> <input type="button" class="informacao"> </div>
+					<div class="col-sm-1"> <i class="fas fa-edit"> </i> </div>
 				</div>
 			</div>
 		</div>
