--- a/application/views/scripts/onibus-intermunicipal/index.phtml
+++ b/application/views/scripts/onibus-intermunicipal/index.phtml
@@ -20,7 +20,7 @@
                     <td>55</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -33,7 +33,7 @@
                     <td>55</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -46,7 +46,7 @@
                     <td>55</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
