--- a/application/views/scripts/onibus-urbano/index.phtml
+++ b/application/views/scripts/onibus-urbano/index.phtml
@@ -24,7 +24,7 @@
                     <td>47</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -39,7 +39,7 @@
                     <td>47</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -54,7 +54,7 @@
                     <td>47</td>
                     <td>
                         <button class="btn btn-info">
-                            <span class="btn-label-secratario"><i class="fas fa-eye"></i></span>
+                            <i class="fas fa-eye"></i>
                             Visualizar Detalhes
                         </button>
                     </td>
